<resources>
    <string name="app_name">BT Music</string>

    <string name="icon">icon</string>
    <string name="title">title</string>
    <string name="subtitle">subtitle</string>
    <string name="enable_app">Enable app</string>
    <string name="refresh">Refresh</string>
    <string name="select_player">Select a music player</string>
    <string name="add_player">Add a player</string>
    <string name="add">add</string>
    <string name="other_player_package">Other player package name</string>
    <string name="done">done</string>
    <string name="settings">Settings</string>
    <string name="pref_reset">Reset data</string>
    <string name="pref_category_settings">Settings</string>
    <string name="pref_volume_enable">Force set audio volume</string>
    <string name="pref_volume">Audio volume</string>
    <string name="pref_stop_playback">Force stop playback on device disconnection</string>
    <string name="pref_disable_bt">Disable bluetooth on device disconnection</string>
    <string name="pref_category_battery">Battery</string>
    <string name="pref_watch_battery">Disable app on low battery</string>
    <string name="pref_battery_level">Battery level</string>
    <string name="pref_start_ui">Start all players with UI</string>
    <string name="pref_desc_start_ui">Some player (i.e. Spotify) can only be started with UI</string>
    <string name="pref_category_about">About</string>
    <string name="pref_tuto">About this app</string>
    <string name="pref_version">Version</string>
    <string name="pref_license">Licences</string>
    <string name="pref_reset_confirmation">Do you really want to reset data ?</string>
    <string name="toast_grant_bluetooth_permission">You must grant bluetooth permission</string>
    <string name="toast_grant_bluetooth_admin_permission">You must grant bluetooth admin permission</string>
    <string name="toast_enable_bluetooth">Please enable bluetooth</string>
    <string name="toast_error_paired_devices">Error getting paired bluetooth devices</string>
    <string name="toast_is_connected"> is now connected :)</string>
    <string name="toast_is_disconnected"> is now disconnected :(</string>
</resources>
