<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp">

    <ImageView
        android:id="@+id/icon1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_devices_other_darkgrey_48dp"
        android:contentDescription="@string/icon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/icon1">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/title" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/subtitle" />

    </LinearLayout>

    <ImageView
        android:id="@+id/icon2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="16dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_devices_other_darkgrey_48dp"
        android:contentDescription="@string/icon" />

    <ImageView
        android:id="@+id/icon3"
        android:layout_width="24dp"
        android:layout_height="24dp"

        android:layout_alignTop="@+id/icon2"
        android:layout_alignStart="@+id/icon2"
        android:layout_marginTop="22dp"
        android:layout_marginStart="22dp"

        android:contentDescription="@string/icon"
        android:src="@drawable/ic_fullscreen_darkgrey_24dp" />

</RelativeLayout>